--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">´ó¼ÍÔª</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">¶¯Ì¬Íø</a> | <a href="https://git.io/fjHpv" rel="nofollow">ÉñÖÝ</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">ÍËµ³</a> | <a href="https://git.io/fjHpU" rel="nofollow">¾ÅÆÀ</a> | <a href="https://git.io/fjHpT" rel="nofollow">ÍøÃÅ</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">ÉñÔÏ</a> | <a href="https://git.io/fjHpI" rel="nofollow">ÐÂ¼ÍÔª</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">¿´ÖÐ¹ú</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">Ã÷»ÛÍø</a> | <a href="https://git.io/fjHpq" rel="nofollow">Ã÷»ÛÊ®·½</a> | <a href="https://git.io/fj9lQ" rel="nofollow">Ã÷»Û½¹µã</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">Ï£ÍûÖ®Éù</a> | <a href="https://git.io/fjHpY" rel="nofollow">ÂþÌ¸µ³ÎÄ»¯</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">ÐÂÌÆÈË</a> | <a href="https://git.io/JervF" rel="nofollow">ÑÇÌ«Ì¨</a> | <a href="https://git.io/fjHpG" rel="nofollow">Ö±²¥</a> | <a href="https://git.io/fj9lp" rel="nofollow">´«Ææ</a> | <a href="https://git.io/fj9lX" rel="nofollow">Éñ»°</a> | <a href="https://git.io/fjHpZ" rel="nofollow">ÈËÉú</a> | <a href="https://git.io/fjFNJ" rel="nofollow">Î±»ð</a > | <a href="https://git.io/fjHpc" rel="nofollow">ÕæÏàÆ¬</a> | <a href="https://git.io/fj9lK" rel="nofollow">²Ø×ÖÊ¯</a> | <a href="https://git.io/fj9l5" rel="nofollow">¶ÌÊÓÆµ</a> | <a href="https://git.io/fjHpW" rel="nofollow">¸æËßÎ´À´</a > | <a href="https://git.io/fjHpl" rel="nofollow">ÖÕ¼¶Ä¿µÄ</a> | <a href="https://git.io/fj9lM" rel="nofollow">ÖÐ¹²»îÕª</a > | <a href="https://git.io/fjHp4" rel="nofollow">·çÓêÌìµØÐÐ</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767967.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2015/04/1502131348532483-320x200.jpg">ÖÐ¹úÑ§Éú±»¿Ø×ï ×¨¼Ò£º¸øÃÀÑ§Êõ»ú¹¹ÇÃ¾¯ÖÓ</a><br><h2><p><hr><strong>ÅÅÐÐ°ñ</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768055.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NF0C5-320x200.jpg">´¨ÆÕ»÷±ÐÒÁÀÊ¶þºÅÈËÎï ¶ÔÖÐ¹²ÊÍºÎÖÖÐÅºÅ</a><br><h2><p><hr><strong>ÅÅÐÐ°ñ</strong></p></h2>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756102.md#1">ÖÐ¹²Íâ½»´ÇÁî³ö¾¡³ó ¡°¹¢Ë¬Ä£ÄâÆ÷¡±±»ÏÂ¼Ü</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/5/n11701493.md#1">¡¾Ë¼ÏëÁìÐä¡¿ÖÐ¹²ÄÚ²¿³ÐÈÏÕý×ßÏò½âÌå£¨Ò»£©</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11753643.md#1">ÌÀÎ¨Ãæ¶Ô¾µÍ·È÷Àá ½Ò¿ªÅ®ÐÇ²»ÎªÈËÖªµÄÞÏÞÎ</a><br>
@@ -9,6 +9,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752699.md#1">±±¾©Å®Ò½ÉúÓöº¦Ï¸½ÚÆØ¹â Ôâ¡°À­¾âÊ½¡±¸î¾±</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751864.md#1">ÄÚÃÉ¹Å¹«°²¾¯¹ÙÇ¹É±Á½¸±¾Ö³¤ µ±¾Ö·â¿Ú</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nscrw413.md#1">¸ü¶à......</a></p><hr><h2><p><strong>½ñÈÕÆÀÂÛ</strong></p></h2>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768047.md#1">ÍõÓÑÈº£ºÃÀ¹ú¡°Õ¶Ê×¡±Ë÷À³ÂíÄá Ò»Ê¯ËÄÄñ</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767482.md#1">ÁÎ×æóÏ£º¶ö·¹µ³ËµÒª¡°È«Ãæ½¨³ÉÐ¡¿µÉç»á¡±</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767385.md#1">¡¾Ãû¼Ò×¨À¸¡¿Ö÷Á÷Ã½ÌåµÄÐÂÄê¾öÐÄ£ºÍ£Ö¹Èö»Ñ</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764911.md#1">¡¾Ãû¼Ò×¨À¸¡¿Ç³ÎöÊ®ÄêÀ´ÃÀ¹úÖ÷Òª¾­¼ÃÂÛµã</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765346.md#1">³ÂË¼Ãô£ºÎ£º¦ÉõÓÚÎäºº·ÎÑ×²»Ã÷²¡¶¾µÄÊÇÊ²Ã´</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764864.md#1">¡¾Ãû¼Ò×¨À¸¡¿´¨ÆÕ¼õÆóÒµË°ÎªºÎÁî×óÅÉ·³ÄÕ</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765134.md#1">¡¾Ãû¼Ò×¨À¸¡¿¸ÄÉÆµØÇò»·¾³ ÎÞÐèÉç»áÖ÷ÒåÕþ²ß</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764938.md#1">ÐÂÖÝ£º´ÓÎ¥·´³ÌÐò¿´ÖÐ¹²ÆÆ»µË¾·¨¹«Õý</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1">¸ü¶à......</a></p><hr><h2><p><strong>¶À¼ÒÊÓ½Ç</strong></p></h2>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11739570.md#1">¡¾2019ÅÌµã¡¿Ê±´ú±ä¸ï ´¨ÆÕµÄ¾Å¼ÇÖØ´¸</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11743871.md#1">¡¾¶À¼Ò¡¿Ô­´óÂ½Ò½Éú£ºÎÒÎªºÎÔ¶ÀëÆ÷¹ÙÒÆÖ²</a><br>
@@ -43,6 +43,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767045.md#1">ÉÂÎ÷Ç°Êé¼ÇÕÔÕýÓÀ±»Éó²é Í¨±¨´ë´Ç¼«ÑÏÀ÷</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767063.md#1">Ô¬±ó£º2019ÄêÒÔ±¯¾çÂäÄ»£¬2020ÄêÒÔ²Ò¾ç½ÒÄ»</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768034.md#1">ÃÀÉãÓ°½ÌÊÚ±»¾ÜÈë¾³Ïã¸Û ÔøÅÄÉã¿¹ÒéÕÕÆ¬</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767967.md#1">ÖÐ¹úÑ§Éú±»¿Ø×ï ×¨¼Ò£º¸øÃÀÑ§Êõ»ú¹¹ÇÃ¾¯ÖÓ</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767938.md#1">¹ãÎ÷ÄÏÄþÒ»Ó×¶ùÔ°ÀÏÊ¦Å°Í¯</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767073.md#1">2019ÄêÇ°11¸öÔÂ ´óÂ½³µÊÐ²úÏúÁ¿Í¬±ÈÏÂ½µ</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767110.md#1">³ÌÏþÈÝ£º³¤½­°×öàÃð¾ø ÖÐ¹²ÄËÎ£»úÔ´Í·</a><br>
@@ -87,13 +88,12 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764667.md#1">À¼ÖÝÖÁÉÙ181ÈËÈ¾²¼²¡ ÎÛÈ¾Ô´ÖÜÎ§¾ÓÃñÇøÃÜ¼¯</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764605.md#1">Ã³Ò×Õ½¼Ó×Ê±¾º®¶¬ ´óÂ½¿Æ¼¼½çÃæÁÙ¸ü´ó¶¯µ´</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764462.md#1">Îäºº±¬·¢²»Ã÷ÒßÇé ¿ÚÕÖ°åÀ¶¸ùÈ«ÇÀ¹â</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764573.md#1">³»ÖÝÂèÂèÓëÐÂÉú¶ùËÀÍö ¼ÒÊôÄâÉêÇëÒ½ÁÆ¼ø¶¨</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_2.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/gudianwu.jpg" title="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ" alt="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ"><br>ÉñÔÏ¹ÅµäÎè±íÑÝ</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9ping.jpg" title="¾ÅÆÀ¹²²úµ³" alt="¾ÅÆÀ¹²²úµ³"><br>¾ÅÆÀ¹²²úµ³</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/communism.jpg" title="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ" alt="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ"><br>¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/weihuo.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"" alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö""><br>ÖÐ¹²µÄÎ±»ðÆ­¾Ö"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/changzhi.jpg" title="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯" alt="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯"><br>¹Å½ñÆæ¹Û-²Ø×ÖÊ¯</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/tianan.jpg" title="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì" alt="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì"><br>Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/weilai.jpg" title="Î´À´ÈËµÄÉñ»°" alt="Î´À´ÈËµÄÉñ»°"><br>Î´À´ÈËµÄÉñ»°¹ÊÊÂ</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/ji-zy.jpg" title="ÖÐ¹²×ï¶ñµÄ»îÕª" alt="ÖÐ¹²×ï¶ñµÄ»îÕª"><br>ÖÐ¹²×ï¶ñµÄ»îÕª</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/huozhai.jpg" title="ÌúÖ¤ÈçÉ½" alt="ÌúÖ¤ÈçÉ½"><br>ÌúÖ¤ÈçÉ½</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4ke.jpg" title="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ" alt="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ"><br>Ò»¼ÒËÄ¿ÚËÀÓÚ±©Õþ</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/jie-di.jpg" title="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦" alt="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦"><br>µÜÃÃÏà¼ÌËÀÓÚÆÈº¦</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/ma-sj.jpg" title="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ" alt="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ"><br>ËýÃÇ±»ÖÐ¹²ÆÈº¦ËÀ</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/shuan-cxl.jpg" title="Ë«³ÇÑªÀá" alt="Ë«³ÇÑªÀá"><br>Ë«³ÇÑªÀá</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/wu-zbh.jpg" title="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤" alt="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤"><br>ÎÞ×ï±ç»¤Õðº³ÈËÐÄ</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6c10-720.jpg" title="´Ó610µ½720" alt="´Ó610µ½720"><br>´Ó610µ½720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/xian-z.jpg" title="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ" alt="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ"><br>ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1400l.jpg" title="ÆÊÎö1400Àý" alt="ÆÊÎö1400Àý"><br>ÆÊÎö1400Àý</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/425.jpg" title="ÍòÈËÉÏ·ÃÕæÏà" alt="ÍòÈËÉÏ·ÃÕæÏà"><br>ÍòÈËÉÏ·ÃÕæÏà</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/qing-h.jpg" title="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó" alt="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó"><br>±»ÆÈº¦µÄÇå»ªÑ§×Ó</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/jian-z513.jpg" title="¼ûÖ¤513" alt="¼ûÖ¤513"><br>¼ûÖ¤513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/gongfu.jpg" title="¹¦·ò Ñ°µÀ" alt="¹¦·ò Ñ°µÀ"><br>¹¦·ò Ñ°µÀ</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/guangguimian.jpg" title="¸è³ª¼ÒÈËÉúÆæ¼£" alt="¸è³ª¼ÒÈËÉúÆæ¼£"><br>¸è³ª¼ÒµÄÈËÉúÆæ¼£</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/ming-jjy.jpg" title="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ" alt="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ"><br>ÃûÐ£¾«Ó¢µÄÑ¡Ôñ</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/yin-lj.jpg" title="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ" alt="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ"><br>ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/ming-hsf.jpg" title="Æ½·²ÖÐµÄ²»Æ½·²" alt="Æ½·²ÖÐµÄ²»Æ½·²"><br>Æ½·²ÖÐµÄ²»Æ½·²</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/nizhibeituolanlao.jpg" title="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"><br>ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/huozhai1.jpg" title="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"  alt="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"><br>¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/motoumks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"><br>Âí¿ËË¼µÄ³ÉÄ§Ö®Â·</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/konggaojm.jpg" title="303ÍòÈËµÄ¾Ù±¨"  alt="303ÍòÈËµÄ¾Ù±¨"><br>303ÍòÈËµÄ¾Ù±¨</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/lianganduibi.jpg" title="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"  alt="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"><br>º£Ï¿Á½°¶Ç¿ÁÒ·´²î</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"><br>Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/xuejiao.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"><br>²»Ò»ÑùµÄº£ÍâÐ£Ô°</a><br>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>ÖÐ¹úÈËÈ¨</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761238.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/003FotoJet_meitu_1-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761238.md#1">´©Ô½·ÇÖÞµÖÃÀ É½¶«Î¬È¨ÈËÊ¿ÍòÀï´óÌÓÍö£¨ÏÂ£©</a><br>2020ÄêµÄÆ½°²Ò¹£¬É½¶«Î¬È¨ÈËÊ¿½çÁ¢½¡ ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763908.md#1">ÆÃÄ«Å®¶­ÑþÇí»ñÊÍ³öÔº ÉñÇé½ôÕÅ³Õ´ô</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763896.md#1">¡°Ò»ÈËÁ¶¹¦È«¼ÒÊÜÒæ¡±°ÄÖÞ·¨ÂÖ¹¦Ñ§Ô±Ð»Ê¦¶÷</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763905.md#1">Ôâ¾Ð15ÈÕ ÖÐ¹úÀÍ¹¤Î¬È¨Õß³ÂÎ°ÏéµÈ3ÈË»ñÊÍ</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762641.md#1">·¨ÂÖ¹¦Ñ§Ô±ÑîÊ¤¾ü±»ÆÈº¦ÖÂËÀ ÂÉÊ¦¾Ù±¨¿Ø¸æ</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728852.md#1">¡¾Ë¼ÏëÁìÐä¡¿×¨·ÃÉÛá°£ºÐè·´¹²º´ÎÀ¼ÛÖµ¹Û</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid278.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÖÐ¹ú¾­¼Ã</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11764223.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2011/12/1112120346202431-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11764223.md#1">ÖÐ¹²¡°ÌúÂ·´óÔ¾½ø¡±´Ì¼¤¾­¼Ã½«´øÀ´ÒÅ»ö? ?</a><br>ÖÐ¹²³Æ2020ÄêÒªÍ¶²úÌúÂ·ÐÂÏßÓâ4000¹« ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763875.md#1">¡¾ÐÂÎÅ¿´µã¡¿´¨ÆÕ³Æ1/15Ç©Ô¼ ±±¾©ÎªºÎ³ÁÄ¬</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763989.md#1">´óÂ½ÏÖÊ·ÉÏÄê¶È×îÔçµØ·½Õ® 1ÔÂÔ¤³¬8000ÒÚ</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763597.md#1">¹ú¼ÊÆ·ÅÆZaraÎäººµêÎÞÔ¤Õ×È«¹Ø ±»Ìù·âÌõ</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763707.md#1">½ñÄêÂò¹ÉÇ° ×¨¼Ò½¨Òé×ÐÏ¸ÑÐ¾¿Õâ¸ö¹ú¼Ò</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762321.md#1">´óÂ½2019ÄêÂôµØ½ð¶î´´ÐÂ¸ß 16³ÇÊÐ³¬Ç§ÒÚ</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid283.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>´óÂ½ÕþÖÎ</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763785.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/15e5f247f8707d13_ttl7dayRGj_tn0101-11-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763785.md#1">7.21¾¯ºÚ¹´½á ÖÐ¹²¹ÄÀø¸Û¾¯Á÷Ã¥»¯</a><br>Ò»Ãû´Ó¾¯6ÄêµÄ¸Û¾¯ÅûÂ¶£¬7.21ÔªÀÊÏ®» ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11764071.md#1">»ªÒêÀÏ°åÖÂÔ±¹¤ÐÅÔðÓ°ÊÓÍÅ¶Ó£ºÊ§Îó¿°³ÆÖÂÃü</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763655.md#1">ÁÖÏ¦¸èÇú×÷´ÊÈË±äØýÃû ÍøÃñ³âÖÐ¹²µçÊÓÌ¨ÎÞ³Ü</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763800.md#1">½ûÖÐ¹²ºÚ¿ÍµÁÇÔ ÄÉÈëÃÀÖÐµÚ¶þ½×¶ÎÃ³Ò×Ì¸ÅÐ</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/5/n11701493.md#1">¡¾Ë¼ÏëÁìÐä¡¿ÖÐ¹²ÄÚ²¿³ÐÈÏÕý×ßÏò½âÌå£¨Ò»£©</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763775.md#1">´òÔÒµêÃæ ÆÆ»µÕßÏò¸Û¾¯º°¡°×Ô¼ºÈË¡±»ñ·ÅÐÐ</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÌìÔÖÈË»ö</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766765.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/15e6905677394b9b_ttl7dayXor_tn0103-xxx-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766765.md#1">¡¾ÅÄ°¸¾ªÆæ¡¿Îäºº·ÎÑ×ÀýÔö SARSÒõÓ°¸ÛÌ¨Ô¤·À</a><br>2020×¢¶¨²»Æ½·²£¬ÐÂÄê¸ÕÒ»¿ªÊ¼£¬¾Í·¢ ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763959.md#1">2020ÍÑÆ¶Äê ÖÐ¹²¶àµØÇ¿ÖÆÍÑÆ¶³óÎÅ°Ù³ö</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763828.md#1">Îäºº±¬·¢ËÆSARS¡°²»Ã÷·ÎÑ×¡±ÃñÖÚÈçºÎ·À·¶£¿</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763808.md#1">¼Ò±»Ç¿²ð¸¸Ä¸Ô©ËÀ ÄÐ×Ó³öÓü±¨¸´ÖÂ1ËÀ2ÉË</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762740.md#1">ÑïÖÝ´óÑ§¶àÃûÑ§Éú¸ÐÈ¾·Î½áºË Ð£·½Ñ¹ÖÆÏûÏ¢</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762556.md#1">ÔøÈ¥¹ýÎäºº Ïã¸ÛÅ®×ÓÒÉÈ¾·ÎÑ×Õý½ÓÊÜ¸ôÀë</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>Éç»áÍòÏó</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763973.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/200102150621100699-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763973.md#1">ÅÌµã2019ÃÀ¹ú¾­¼Ã ½øÈëÊ·ÉÏ×î³¤Ôö³¤ÆÚ</a><br>ÃÀ¹ú¾­¼ÃÔÚ2019ÄêÌåÏÖ³öÇ¿´óµÄ¿¹Ñ¹ÐÔ ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764636.md#1">Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2020/01/02£©</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763603.md#1">ÖØÇìÔªµ©×Å»ð¸ßÂ¥ÉæÉñÃØ·¢Õ¹ÉÌ</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762158.md#1">4.7ÒÚÃÀÔª¼ÙÄÍ¿ËÐ¬ÈëÃÀ »ªÈË×÷°¸ÊÖ·¨ÆØ¹â</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762029.md#1">ÐÂÄê±±¾©²ýÆ½Ç¿²ð °ÙÓà´åÃñÉÏ·ÃÔâÍþÐ²</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761858.md#1">Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2020/01/01£©</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>¿Æ½ÌÎÄ»¯</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761587.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/kindergarten-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761587.md#1">ºì¸è´úÌæ¶ù¸è ´óÂ½Ó×Í¯Ò²ÒªÐûÊ¾Ð§ÖÒ</a><br>¶ù¸è±ä¡°ºì¸è¡±£¬ÖÐ¹ú´óÂ½Ó×ÖÉÔ°±»Ç¿ ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748178.md#1">¡¾Ö±²¥»Ø·Å¡¿ÐÂÌÆÈËµçÊÓÌ¨2020¿çÄêçÍ·×Ò¹</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756680.md#1">ÄêÄ©¹ØÃÅ³± É½¶«µÈÈýÊ¡±¨¿¯Ã÷ÄêÆðÍ£¿¯</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754599.md#1">ÔøÔâÄÐÓÑÈèÂî ÉòÑôº½¿Õº½Ìì´óÑ§Å®Éú×¹Â¥Íö</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754408.md#1">»ùÒò±à¼­Ó¤¶ù ºØ½¨¿üÉæ·Ç·¨ÐÐÒ½»ñÐÌ3Äê</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11749809.md#1">ÀîÈÙºÆÌ¾ÈËµÄ»µÃ»µ×Ïß µË×ÏÆåÓÃÊ«ÐÔ¸è´Ê»ØÓ¦</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid281.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>ÍøÎÅ½ûÎÅ</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758321.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MG8YG-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758321.md#1">°²È«µ£ÓÇ ÃÀÂ½¾ü½ôËæº£¾ü½ûÓÃTikTok</a><br>¶¶Òô¹ú¼Ê°æTikTokÕýÔÚÒýÆðÔ½À´Ô½¶àµÄ ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756102.md#1">ÖÐ¹²Íâ½»´ÇÁî³ö¾¡³ó ¡°¹¢Ë¬Ä£ÄâÆ÷¡±±»ÏÂ¼Ü</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742493.md#1">ÍøÎÄ£º´óÂ½Æû³µÐÐÒµ¼èÄÑµÄÁ½´ó¿´µã</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742305.md#1">ÍøÎÄ£ºÑëÐÐÇ®Ó¡³öÀ´ÁË ½èÇ®µÄÈËÃ»ÁË</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/6/n11706347.md#1">·´ËÍÖÐºÍÁùËÄÊÂ¼þ ÃÀÕþ¸®Ó¦¶Ô´ëÊ©¶Ô±È</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728358.md#1">¸ÛÈË¸ø¿¹ÒéÕßÃÇÐ´Ê¥µ®¿¨£ºÒÔºóÔÙÇì×£</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÈºÌåÊÂ¼þ</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760851.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/mmexport1574158876716-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760851.md#1">2020È«Ãæ±¼Ð¡¿µ£¿·ÃÃñ£ºÀá±¼</a><br>ÖÐ¹²µ±¾ÖÔø¿äº£¿Ú£º¡°2020È«Ãæ±¼Ð¡¿µ ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11747752.md#1">ÖÐ¿Æ´ó¸±Ð£³¤±»Ö¸ÓëÖÐ¹²¾üÆóºÏ×÷ ÔøÔâÃÀ¾ÜÇ©</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11746173.md#1">ÕãÊýÇ§Ñ§×ÓÁ¬ÐøÎ¬È¨ÈýÌì ¿¹ÒéÑ§Ð£¸ÄÃû»»ÖÆ</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742110.md#1">·¢±í³Å¸ÛÃð¹²ÑÔÂÛ ´óÂ½¶àÃû¹«ÃñÔâÐÌ¾Ð</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11731023.md#1">ÔÁ´åÃñÆûÓÍµ¯¹¥Õþ¸®ÊÓÆµÆØ¹â Ä¿»÷ÕßÃèÊöÏÖ³¡</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728981.md#1">´åÃñÒÉÕþ¸®Ò×µØ½¨»ðÔá³¡ Ã¯ÃûÔÙ±¬¾¯Ãñ³åÍ»</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid279.md#1">¸ü¶à......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>¾ÅÆÀ¹²²úµ³</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">¡¾Ò»¡¿ÆÀ¹²²úµ³ÊÇÊ²Ã´</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">¡¾¶þ¡¿ÆÀÖÐ¹ú¹²²úµ³ÊÇÔõÑùÆð¼ÒµÄ</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">¡¾Èý¡¿ÆÀÖÐ¹ú¹²²úµ³µÄ±©Õþ</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">¡¾ËÄ¡¿ÆÀ¹²²úµ³ÊÇ·´ÓîÖæµÄÁ¦Á¿</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">¡¾Îå¡¿ÆÀ½­ÔóÃñÓëÖÐ¹²Ïà»¥ÀûÓÃÆÈº¦·¨ÂÖ¹¦</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">¡¾Áù¡¿ÆÀÖÐ¹ú¹²²úµ³ÆÆ»µÃñ×åÎÄ»¯</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">¡¾Æß¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÉ±ÈËÀúÊ·</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">¡¾°Ë¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÐ°½Ì±¾ÖÊ</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">¡¾¾Å¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÁ÷Ã¥±¾ÐÔ</a></td><td VALIGN=TOP width="352"><h2><p><strong>ÈýÍË´ó³±</strong></p></h2><strong>ÍË³öÖÐ¹²µ³¡¢ÍÅ¡¢¶Ó×ÜÈËÊý:
 
 ```diff
-- ¹² 349,244,185 ÈË
+- ¹² 349,244,387 ÈË
 ```
 </strong>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11666092.md#1">¾ÅÆÀ15ÖÜÄê ¿´´óÂ½ÃñÖÚÆúÖÐ¹² ¾ä¾äÕæÇé</a><br>
