--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752699.md#1">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768110.md#1">洪达：拒绝中共 维护普世价值</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768047.md#1">王友群：美国“斩首”索莱马尼 一石四鸟</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767482.md#1">廖祖笙：饿饭党说要“全面建成小康社会”</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767385.md#1">【名家专栏】主流媒体的新年决心：停止撒谎</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766346.md#1">颜丹：是谁造出了“善小而不为”的中国人？</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765346.md#1">陈思敏：危害甚于武汉肺炎不明病毒的是什么</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764864.md#1">【名家专栏】川普减企业税为何令左派烦恼</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765134.md#1">【名家专栏】改善地球环境 无需社会主义政策</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
@@ -36,7 +36,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766968.md#1">武汉不明肺炎 专家：疫情越封锁越难防疫</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766999.md#1">中共警察强制中小学男生抽血 建DNA数据库</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767498.md#1">武汉肺炎疫情蔓延 香港专家：恐已人传人</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗将军索莱玛尼被击毙 为何罪有应得？</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱玛尼被击毙 他是什么人？</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767423.md#1">大批明星搭机资料遭国航员工泄露</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760693.md#1">蒋经国一生反共信念的历程</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767304.md#1">赵正永的大管家 陕西前副省长陈国强被双开</a><br>
@@ -59,7 +59,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766574.md#1">除掉伊朗二号人物 川普：为了止战非宣战</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766515.md#1">传武汉已掌握新病毒 港府急应变拟升级防疫</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766426.md#1">习近平与林郑新年致辞有难言之隐？专家解读</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766425.md#1">山西退伍军人死于非命 遗体吊在信访局门外</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766425.md#1">新年前夕 信访局门上惊现山西退伍军人遗体</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766192.md#1">麦康奈尔：弹劾案轮到参院上场 会冷静判断</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766347.md#1">《亚洲周刊》捧港警 作家董启章羞与为伍</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766037.md#1">凑成好字 40岁章子怡宣布新年二胎产子</a><br>
