--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -59,7 +59,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766574.md#1">除掉伊朗二号人物 川普：为了止战非宣战</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766515.md#1">传武汉已掌握新病毒 港府急应变拟升级防疫</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766426.md#1">习近平与林郑新年致辞有难言之隐？专家解读</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766425.md#1">新年前夕 信访局门上惊现山西退伍军人遗体</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766425.md#1">新年前夕 信访局门外惊现山西退伍军人遗体</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766192.md#1">麦康奈尔：弹劾案轮到参院上场 会冷静判断</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766347.md#1">《亚洲周刊》捧港警 作家董启章羞与为伍</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766037.md#1">凑成好字 40岁章子怡宣布新年二胎产子</a><br>
