--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752699.md#1">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768074.md#1">周晓辉：更换中联办主任 中南海仍避重就轻</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768110.md#1">洪达：拒绝中共 维护普世价值</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768047.md#1">王友群：美国“斩首”索莱马尼 一石四鸟</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767482.md#1">廖祖笙：饿饭党说要“全面建成小康社会”</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766288.md#1">王友群：如何看中美将签署第一阶段贸易协议</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766346.md#1">颜丹：是谁造出了“善小而不为”的中国人？</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765346.md#1">陈思敏：危害甚于武汉肺炎不明病毒的是什么</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764864.md#1">【名家专栏】川普减企业税为何令左派烦恼</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11743871.md#1">【独家】原大陆医生：我为何远离器官移植</a><br>
