--- a/gb/ncid280_4.md
+++ b/gb/ncid280_4.md
@@ -19,7 +19,12 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/21/n11670300.md#1" target="_blank">研究：韩国入冬后空气污染物八成来自中国</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/21/n11670300.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/000_1A11XD-150x120.jpg" align ="left"></a>韩日中三国对大气污染物流动的共同研究显示，韩国境内有高达三成的细悬浮污染物（PM2.5）来自中国，入冬后这个数字更飙高至八成。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 10:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/20/n11669894.md#1" target="_blank">北京医院“劝回”产妇 孩子生在酒店险丢命</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/20/n11669894.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/VCG111131730656-150x120.jpg" align ="left"></a>预产期已过的孕妇曹琳（化名）因腹痛加剧来到建档的北京一医院就诊，但被告知未到达入院条件。离开医院两小时后，曹琳在一家酒店产下一男婴。婴儿现重度急性呼吸窘迫综合症等15种症状，医院被家属质疑处置不当。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 7:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/20/n11669709.md#1" target="_blank">内蒙第三例鼠疫疫源地封路 测过往民众体温</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/20/n11669709.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15d8f5e896fbf1ed_ttl7day7Ys_Untitled-150x120.jpg" align ="left"></a>内蒙古已发现三起鼠疫病例，第三例病例是锡林郭勒盟镶黄旗一工人。目前，疫源地镶黄旗在检测过往群众体温，并封锁了去往疫源地的道路。有当地人发帖说死了好几人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 5:54 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11667347.md#1" target="_blank">【热点互动】中共正在“维稳”鼠疫疫情？</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11667347.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15d8a89804741839_ttl7dayYDT_e6f265b096a0c849-150x120.jpg" align ="left"></a>过去一周，北京、内蒙古先后出现鼠疫病例，引发民众恐慌。中共官方严控信息，但社交网络则流传疫情比官方披露的更加严重。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 9:06 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/5/n11702307.md#1" target="_blank">浏阳烟花厂爆炸7死 厂房成平地 汽车炸变形</a><br></h3>昨日（12月4日），湖南长沙浏阳市澄潭江镇碧溪烟花制造有限公司石下工区发生爆炸后，已致7人死13人受伤。今日（12月5日）有消息指，当时厂房炸成废墟，面包车都被炸得扭曲变形，现场还升起蘑菇云状黑烟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 4:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/5/n11701869.md#1" target="_blank">广东一木材厂着火延烧3栋民宅 现场有油罐</a><br></h3>12月5日早上9点30分许，广东省清远市清城区一木材厂发生火灾，着火面积约700平方米，并延烧到隔壁的三栋居民楼。同时，现场有三只油罐。但着火原因依然不明。
+
+中共央视新闻客户端披露上述消息。据流出视频显示，现场多处木材垛同时着火，火势燃烧猛烈，居民楼底层也着火，现场浓烟滚滚。
+
+责任编辑：萧律生......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/5/n11701759.md#1" target="_blank">唐山4.5级地震后 新疆现4.9级地震</a><br></h3>12月5日10时46分，新疆阿克苏地区拜城县（北纬41.73度，东经81.65度）发生4.9级地震，震源深度15千米。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 1:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/5/n11701535.md#1" target="_blank">河北唐山发生4.5级地震 北京有震感</a><br></h3>今早（5日）8时2分，河北唐山市丰南区发生4.5级地震。北京朝阳、通州等地区网民反馈有震感。暂无人员伤亡消息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 9:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/3/n11698241.md#1" target="_blank">云南一高速在建隧道口坍塌 12人遇难</a><br></h3>上周，云南临沧市凤庆县云凤高速公路第二合同段安石隧道出口坍塌，截止今日（12月4日）下午3时，已导致12人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 9:34 PM							</td></tr>
@@ -36,6 +41,5 @@
 截至27日上午9时，在前期自救的情况下，9人获救；后又救出5人。但是这14.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 11:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/25/n11679108.md#1" target="_blank">广西靖西5.2级地震 余震15次 至少1人死亡</a><br></h3>11月25日上午，广西靖西市发生5.2级地震，随后又发生3.9级余震，导致1人死亡4人受伤。中午，广西崇左市大新县发生3.2级地震。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 4:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/21/n11671034.md#1" target="_blank">传北京东城区广渠门中学一学生被刺身亡</a><br></h3>11月21日上午，北京东城区天坛东路上原人才市场附近，广渠门中学一名学生被刺身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 5:25 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/20/n11667599.md#1" target="_blank">山东煤矿发生安全事故 11人被困</a><br></h3>11月20日5时50分，山东能源肥城矿业集团位于嘉祥县境内的梁宝寺煤矿发生安全事故，造成11人被困，目前救援工作正在进行中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月20日 10:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ffbns289/djy/blob/master/gb/ncid280_4.md#1<br><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/ncid280_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_4.htm">http://www.epochtimes.com/gb/ncid280_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
